<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".MainActivity">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_swift"
                android:layout_width="@dimen/_100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/text_background"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:text="@string/text_swift"
                app:drawableStartCompat="@drawable/ic_swift" />

            <TextView
                android:id="@+id/tv_objective_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/text_background"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:text="@string/text_objective_c"
                app:drawableStartCompat="@drawable/ic_objective_c" />

            <TextView
                android:id="@+id/tv_dart"
                android:layout_width="@dimen/_100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/text_background"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:text="@string/text_dart"
                app:drawableStartCompat="@drawable/ic_dart" />

            <TextView
                android:id="@+id/tv_java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/text_background"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:text="@string/text_java"
                app:drawableStartCompat="@drawable/ic_java" />

            <TextView
                android:id="@+id/tv_html"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/text_background"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:text="@string/text_html"
                app:drawableStartCompat="@drawable/ic_html" />

            <TextView
                android:id="@+id/tv_java_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@drawable/text_background"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:text="@string/text_java_script"
                app:drawableStartCompat="@drawable/ic_java_script" />


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_github"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

    </FrameLayout>

    <TextView
        android:id="@+id/tv_name_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_github"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_hello"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <ImageView
        android:id="@+id/iv_github"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_github" />

    <TextView
        android:id="@+id/tv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/tv_github_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_github_user"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_github" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_back_main"
        android:drawableEnd="@drawable/ic_search"
        android:ems="10"
        android:hint="@string/type_user"
        android:inputType="textPersonName"
        android:padding="@dimen/_12dp"
        android:textColorHint="@color/colorMain"
        android:textSize="@dimen/_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_github_search" />

    <TextView
        android:id="@+id/tv_top_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/top_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <ListView
        android:id="@+id/lv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_user" />


</androidx.constraintlayout.widget.ConstraintLayout>