<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ImageView
        android:id="@+id/iv_ilustrasi"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_200dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_intro" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="@+id/iv_ilustrasi"
        app:layout_constraintStart_toStartOf="@+id/iv_ilustrasi"
        app:layout_constraintTop_toBottomOf="@+id/iv_ilustrasi"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/tv_intro_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/iv_ilustrasi"
        app:layout_constraintStart_toStartOf="@+id/iv_ilustrasi"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <EditText
        android:id="@+id/et_intro_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:background="@drawable/intro_edit_background"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/_8dp"
        android:hint="@string/_type"
        android:textColorHint="@color/colorMain"
        android:textSize="@dimen/_12sp"
        android:padding="@dimen/_18dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_ilustrasi"
        app:layout_constraintStart_toStartOf="@+id/iv_ilustrasi"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro_desc" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_send"
        android:background="@drawable/button_background"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_intro_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_intro_name"
        app:layout_constraintTop_toBottomOf="@+id/et_intro_name" />

</androidx.constraintlayout.widget.ConstraintLayout>